@@ -1,0 +1,36 @@
+/**
+ * NetXMS - open source network management system
+ * Copyright (C) 2003-2011 Victor Kirhenshtein
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+ */
+package org.netxms.ui.eclipse.osm;
+
+import org.netxms.client.GeoLocation;
+import org.netxms.client.objects.GenericObject;
+
+/**
+ * Interface for geolocation cache listeners
+ */
+public interface GeoLocationCacheListener
+{
+	/**
+	 * Called by geolocation cache when object in cache changed
+	 * 
+	 * @param object changed object
+	 * @param prevLocation previous objects's location (may be null)
+	 */
+	public abstract void geoLocationCacheChanged(GenericObject object, GeoLocation prevLocation);
+}
