@@ -6,6 +6,9 @@
    <aboutInfo>
       <text>
          NetXMS Management Console
+
+Version 1.1.1
+Copyright (c) 2003-2011 Victor Kirhenshtein, Alex Kirhenshtein
       </text>
    </aboutInfo>
 
@@ -30,8 +33,16 @@
       </win>
    </launcher>
 
+
    <vm>
    </vm>
+
+   <license>
+        <url>http://www.gnu.org/licenses/old-licenses/gpl-2.0-standalone.html</url>
+        <text>
+
+         </text>
+   </license>
 
    <plugins>
       <plugin id="com.ibm.icu"/>
