@@ -64,7 +64,10 @@
          </property>
          <property
                name="aboutText"
-               value="NetXMS Management Console">
+               value="NetXMS Management Console
+
+Version 1.1.1
+Copyright (c) 2003-2011 Victor Kirhenshtein, Alex Kirhenshtein">
          </property>
          <property
                name="preferenceCustomization"
